(library
 (name macosx_system_process)
 (public_name virtual.macosx_system_process)
 ; (modules macosx_system_process)
 (enabled_if
  (= %{system} "macosx"))
 (libraries unix)
 (implements system_process))

(library
 (name linux_system_process)
 (public_name virtual.linux_system_process)
 ; (modules linux_system_process)
 (enabled_if
  (= %{system} "linux"))
 (libraries unix)
 (implements system_process))

(rule
 (deps linux_system_process.ml)
 (target system_process.ml)
 (enabled_if
  (= %{system} "linux"))
 (action
  (copy %{deps} %{target})))

(rule
 (deps macosx_system_process.ml)
 (target system_process.ml)
 (enabled_if
  (= %{system} "macosx"))
 (action
  (copy %{deps} %{target})))
